--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
-
-<div>
-
-    hola mundo
-</div>
+    <div>
+        <p>Hola Mundo</p>
+        <p>Github repository</p>
+    </div>
 
 </body>
 </html>
