--- a/index.html
+++ b/index.html
@@ -3,13 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Portafolio1</title>
 </head>
+
 <body>
+
+
+  <header>    
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #10004F; margin-top: -8px;">
+    <div class="container-fluid" style="background-color: #10004F; height: 80px;">
+    <a class="navbar-brand letras" href="#">LATAM</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle letras" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Ofertas y Destinos
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item letrasn" href="#">Ofertas de Vuelos</a></li>   
+            <li><a class="dropdown-item letrasn" href="#">Destinos</a></li>  
+            <li><a class="dropdown-item letrasn" href="#">Hoteles, autos y paquetes</a></li>           
+          </ul>
+        </li> 
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle letras" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Mis Viajes
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item letrasn" href="#">Arequipa</a></li>            
+          </ul>
+        </li>        
+        <li class="nav-item">
+          <a class="nav-link letras" href="#">Centro de Ayuda</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link letras" href="#">Estado de Vuelo</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link letras" href="#">LATAM Pass</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link letras" href="#">USD-USD</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link letras" href="#">Iniciar Sesion</a>
+        </li>
+       
+      </ul>
+    </div>
+  </div>
+</nav>
+</header>
+
+
+
     <div>
         <p>Hola Mundo</p>
         <p>Github repository</p>
+        <h1>Etiqueta personalizada</h1>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
