--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>    
     <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #10004F; margin-top: -8px;">
     <div class="container-fluid" style="background-color: #10004F; height: 80px;">
-    <a class="navbar-brand letras" href="#">LATAM</a>
+    <a class="navbar-brand letras" href="#" style="margin-left: 200px;">LATAM</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -42,7 +42,7 @@
           <a class="nav-link letras" href="#">Centro de Ayuda</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link letras" href="#">Estado de Vuelo</a>
+          <a class="nav-link letras" href="#" style="margin-left: 500px;">Estado de Vuelo</a>
         </li>
         <li class="nav-item">
           <a class="nav-link letras" href="#">LATAM Pass</a>
@@ -61,12 +61,10 @@
 </header>
 
 
-
-    <div>
-        <p>Hola Mundo</p>
-        <p>Github repository</p>
-        <h1>Etiqueta personalizada</h1>
-    </div>
+<section class="imgbanner">
+   <h1>hola ffefefefefef</h1>
+</section>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
